# gfx-rs

./: .gitattributes  .gitignore  Cargo.toml
examples/: Cargo.toml  build.rs
examples/armadillo/: main.rs
examples/clear_color/: Cargo.toml
examples/clear_color/src/: main.rs
examples/deffered/: main.rs
examples/hello_3d/: Cargo.toml  build.rs
examples/hello_3d/src/: main.rs
examples/hello_compute/: Cargo.toml  build.rs
examples/hello_compute/src/: main.rs
examples/hello_draw_indexed/: Cargo.toml
examples/hello_draw_indexed/src/: main.rs
examples/hello_gfx/: Cargo.toml
examples/hello_gfx/src/: main.rs
examples/hello_graphics_pipeline/: Cargo.toml
examples/hello_graphics_pipeline/src/: main.rs
examples/hello_texture/: Cargo.toml  build.rs
examples/hello_texture/src/: main.rs
examples/hello_triangle/: main.rs
examples/mandelbrot/: Cargo.toml  build.rs  main.rs
examples/mandelbrot/src/: main.rs
examples/particle/: main.rs
examples/resources/shaders/: armadillo.fs  armadillo.vs  deffered_shading.fs  deffered_shading.vs  geometry_output.fs  geometry_output.vs  wave.fs  wave.vs
examples/shader_setup/: Cargo.toml  build.rs
examples/shader_setup/src/: main.rs
examples/simple_window/: Cargo.toml
examples/simple_window/src/: main.rs
examples/src/: lib.rs
examples/src/device/: device.rs
examples/wave/: main.rs
gfx/: Cargo.toml
gfx-ash/: Cargo.toml  build.rs
gfx-ash/examples/: hello_compute.rs  hello_compute_ash.rs  hello_texture_ash.rs  hello_texture_mapping.rs  hello_triangle.rs  hello_triangle_ash.rs
gfx-ash/src/: buffer_ash.rs  color_target_view_ash.rs  command_buffer_ash.rs  depth_stencil_view_ash.rs  detail.rs  device_ash.rs  fence_ash.rs  lib.rs  memory_pool_ash.rs  queue_ash.rs  sampler_ash.rs  semaphore_ash.rs  shader_ash.rs  swap_chain_ash.rs  texture_ash.rs  texture_view_ash.rs  util.rs  vertex_state_ash.rs
gfx-ash/src/util/: mod.rs
gfx-egui/: Cargo.toml
gfx-egui/examples/: egui_demo.rs
gfx-egui/resources/: egui.fs  egui.vs
gfx-egui/src/: lib.rs  platform_glow.rs  platform_winit.rs
gfx-glow/: Cargo.toml
gfx-glow/examples/: hello_triangle_glow.rs
gfx-glow/examples/hello_attributes/: main.rs
gfx-glow/examples/hello_draw_indexed_glow/: main.rs
gfx-glow/examples/hello_triangle_glow/: main.rs
gfx-glow/examples/hello_wasm_glow/: index.html  main.rs
gfx-glow/resources/shaders/: frame_buffer_renderer.fs  frame_buffer_renderer.vs
gfx-glow/src/: buffer_glow.rs  color_target_view_glow.rs  command_buffer_glow.rs  depth_steicil_view_glow.rs  device_glow.rs  fence_glow.rs  lib.rs  queue_glow.rs  sampler_glow.rs  semaphore_glow.rs  shader_glow.rs  swap_chain_glow.rs  texture_glow.rs  texture_view_glow.rs  vertex_state_glow.rs  vi.rs
gfx-util/: Cargo.toml
gfx-util/examples/: glsl_to_hlsl.rs
gfx-util/src/: lib.rs  shader_compiler.rs  shader_converter.rs  shader_reflection.rs
gfx-util/tests/: shader_reflection_test.rs
gfx-vulkano/: Cargo.toml
gfx-vulkano/examples/: hello_compute_vk.rs  hello_triangle.rs  hello_triangle_offscreen.rs  hello_triangle_vk.rs  raw_hello_mesh_shader_vk.rs
gfx-vulkano/src/: buffer_vk.rs  color_target_view_vk.rs  command_buffer_vk.rs  depth_stencil_view_vk.rs  device_vk.rs  fence_vk.rs  interop.rs  lib.rs  queue_vk.rs  sampler_vk.rs  semaphore_vk.rs  shader_vk.rs  surface_vk.rs  swap_chain_vk.rs  texture_view_vk.rs  texture_vk.rs  util.rs  vertex_state_vk.rs  viewport_scissor_state_vk.rs
gfx-vulkano/src/detail/: mod.rs  shader_object.rs
gfx-vulkano/tests/: buffer_test.rs  command_buffer_test.rs  device_test.rs  queue_test.rs
gfx-websys/: Cargo.toml
gfx-websys/examples/hello_3d_wsys/: main.rs
gfx-websys/examples/hello_triangle_wsys/: main.rs
gfx-websys/examples/mandelbrot_wsys/: main.rs
gfx-websys/src/: buffer_wsys.rs  color_target_view_wsys.rs  command_buffer_wsys.rs  depth_stencil_view_wsys.rs  device_ws.rs  fence_wsys.rs  lib.rs  queue_wsys.rs  sampler_wsys.rs  semaphore_wsys.rs  shader_wsys.rs  swap_chain_wsys.rs  texture_view_wsys.rs  texture_wsys.rs  vertex_state_wsys.rs
gfx-wgpu/: Cargo.toml
gfx-wgpu/examples/: hello_3d.rs  hello_compute.rs  hello_constant_buffer.rs  hello_depth_test.rs  hello_draw_indexed.rs  hello_egui_wgpu.rs  hello_instancing_wgpu.rs  hello_texture_mapping.rs  hello_triangle.rs  hello_triangle_wgpu.rs  iced_binding.rs
gfx-wgpu/examples/tauri_wgpu/: index.html  main.rs  my_plugin.rs  tauri.conf.json
gfx-wgpu/resources/: render_color_target.fs  render_color_target.vs
gfx-wgpu/src/: buffer_wgpu.rs  color_target_view_wgpu.rs  command_buffer.rs  depth_stencil_view_wgpu.rs  device_wgpu.rs  egui.rs  fence_wgpu.rs  gpu_address_wgpu.rs  lib.rs  queue_wgpu.rs  sampler_wgpu.rs  semaphore_wgpu.rs  shader_wgpu.rs  swap_chain_wgpu.rs  texture_view_wgpu.rs  texture_wgpu.rs  util.rs  vertex_state_wgpu.rs
gfx-wgpu/src/detail/: mod.rs  swap_chain_pipeline.rs
gfx-wgpu/src/util/: convert_pipeline_layout.rs  mod.rs
gfx-wgpu/tests/: command_buffer_test.rs  queue_test.rs
gfx/examples/: hello_3d.rs  hello_triangle.rs
gfx/src/: buffer_builder.rs  color_target_view_builder.rs  command_buffer_builder.rs  device_builder.rs  lib.rs  queue_builder.rs  sampler_builder.rs  semaphore_builder.rs  shader_builder.rs  swap_chain_builder.rs  texture_builder.rs  texture_view_builder.rs  vertex_state_builder.rs
gfx/src/api/: ash.rs  glow.rs  mod.rs  vulkano.rs  wgpu.rs  wsys.rs
gfx/src/vulkano/: mod.rs
gfx/src/wgpu/: mod.rs
gfx/tests/: hello_triangle_test.rs  queue_test.rs  texture_test.rs
sj/: Cargo.toml
sj/src/: lib.rs
sj/src/gfx/: blend_state_api.rs  buffer_api.rs  clear_color_value.rs  color_target_view_api.rs  command_buffer_api.rs  depth_stencil_state_api.rs  depth_stencil_view_api.rs  descriptor_pool_api.rs  device_api.rs  device_info.rs  enum.rs  fence_api.rs  gpu_address_api.rs  memory_pool_api.rs  (+16 more)
sj/tests/: command_tests.rs  hello_triangle_test.rs
standalone/: Cargo.toml  build.rs
standalone/portfolio/: lib.rs  main.rs  mandelbrot.rs  triangle.rs
vulkan-rs/: Cargo.toml
vulkan-rs/src/: instance.rs  lib.rs  physical_device.rs
(+197 files in other folders)
