[workspace]
resolver = "2"
members = [
        "gfx",
#        "sj",
        "gfx-ash",
        "gfx-egui",
        "gfx-interface",
        "gfx-vulkano",
        "gfx-wgpu",
        "examples",
#	"examples/clear_color",
#	"examples/hello_graphics_pipeline",
#	"examples/hello_3d",
#	"examples/hello_compute",
#	"examples/hello_draw_indexed",
#	"examples/mandelbrot",
#	"examples/shader_setup",
#	"examples/simple_window",
]
