[workspace]
resolver = "2"
members = [
        "gfx",
#        "sj",
        "gfx-ash",
        "gfx-glow",
        "gfx-egui",
        "gfx-interface",
        "gfx-vulkano",
        "gfx-websys",
        "gfx-wgpu",
        "examples",
        "run-wasm",
        "vi-rs",
#	"examples/clear_color",
#	"examples/hello_graphics_pipeline",
#	"examples/hello_3d",
#	"examples/hello_compute",
#	"examples/hello_draw_indexed",
#	"examples/mandelbrot",
#	"examples/shader_setup",
#	"examples/simple_window",
]
