[package]
name = "sjgfx-examples"
edition = "2021"
version = "0.1.0"

[[bin]]
name = "armadillo"
path = "armadillo/main.rs"

[[bin]]
name = "deffered"
path = "deffered/main.rs"

[[bin]]
name = "mandelbrot"
path = "mandelbrot/main.rs"

[[bin]]
name = "wave"
path = "wave/main.rs"

[features]
default = [ ]
backend-wgpu = [ ]
backend-ash = [ ]
backend-vulkano = [ ]

[dependencies]
sjgfx-ash = { path = "../gfx-ash" }
sjgfx-interface = { path = "../gfx-interface" }
sjgfx-util = { path = "../gfx-util" }
sjgfx-wgpu = { path = "../gfx-wgpu" }
sjgfx = { path = "../gfx" }
sjvi = { path = "../vi" }
winit = "0.26.0"
raw-window-handle = "0.4.0"
nalgebra-glm = "0.3"
tobj = "3.2.1"

[dev-dependencies]
winit = "0.26.0"
raw-window-handle = "0.4.0"

[build-dependencies]
sjgfx-util = { path = "../gfx-util" }