[package]
name = "sjgfx-ash"
edition = "2021"
version = "0.1.0"

[dependencies]
sjgfx-interface = { path = "../gfx-interface" }
ash = { git = "https://github.com/MaikKlein/ash.git", tag = "0.36.0", default-features = false, features = ["linked", "debug"] }
ash-window = { git = "https://github.com/MaikKlein/ash.git", tag = "0.36.0" }
raw-window-handle = "*"
winit = "0.26"

[dev-dependencies]
shaderc = "0.7"
