[package]
name = "sjgfx-glow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sjgfx-interface = { path = "../gfx-interface" }
sjvi = { path = "../vi-rs" }
glow = "0.11.2"
winit = "0.27.1"
glutin = "0.30.3"
glutin-winit = "0.2.1"
raw-window-handle = "0.5.0"
lazy_static = "1.4.0"
uuid = { version = "0.8.0", features = ["v4"] }

[dev-dependencies]