[package]
name = "sjgfx-util"
edition = "2021"
version = "0.1.0"

[dependencies]
sjgfx-interface = { path = "../gfx-interface" }
tobj = "3.2.1"
naga = { version = "0.12.2", features = ["glsl-in", "spv-out", "wgsl-out"] }

# rspirv-0.11.0+1.5.4
rspirv = { git = "https://github.com/gfx-rs/rspirv.git", rev = "c7305b8" }
