[package]
name = "sjgfx-vulkano"
edition = "2021"
version = "0.1.0"

[dependencies]
sjvi = { path = "../vi" }
sjgfx-interface = { path = "../gfx-interface" }
vulkano = "0.29.0"
vulkano-win = "0.29.0"
winit = "0.26"
raw-window-handle = "0.4.0"

[dev-dependencies]
sjgfx-util = { path = "../gfx-util" }
