[package]
name = "sjgfx-vulkano"
edition = "2021"
version = "0.1.0"

[dependencies]
bytemuck = "*"
sjvi = { path = "../vi-rs" }
sjgfx-interface = { path = "../gfx-interface" }
vulkano = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.6"
raw-window-handle = "0.5.0"

[dev-dependencies]
sjgfx-util = { path = "../gfx-util" }
ash = "*"