[package]
name = "sjgfx-wsys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sjvi = { path = "../vi-rs" }
sjgfx-interface = { path = "../gfx-interface" }
web-sys = { version = "0.3.58", features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "HtmlVideoElement",
  "ImageBitmap",
  "WebGlActiveInfo",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlProgram",
  "WebGlQuery",
  "WebGlRenderbuffer",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "WebGlSampler",
  "WebGlShader",
  "WebGlSync",
  "WebGlTexture",
  "WebGlTransformFeedback",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "Window",

  "AngleInstancedArrays",
  "ExtBlendMinmax",
  "ExtColorBufferFloat",
  "ExtColorBufferHalfFloat",
  "ExtDisjointTimerQuery",
  "ExtFragDepth",
  "ExtShaderTextureLod",
  "ExtSRgb",
  "ExtTextureFilterAnisotropic",
  "OesElementIndexUint",
  "OesStandardDerivatives",
  "OesTextureFloat",
  "OesTextureFloatLinear",
  "OesTextureHalfFloat",
  "OesTextureHalfFloatLinear",
  "OesVertexArrayObject",
  "WebglColorBufferFloat",
  "WebglCompressedTextureAstc",
  "WebglCompressedTextureEtc",
  "WebglCompressedTextureEtc1",
  "WebglCompressedTexturePvrtc",
  "WebglCompressedTextureS3tc",
  "WebglCompressedTextureS3tcSrgb",
  "WebglDebugRendererInfo",
  "WebglDebugShaders",
  "WebglDepthTexture",
  "WebglDrawBuffers",
  "WebglLoseContext",
  "OvrMultiview2",
] }