[package]
name = "sjgfx-wgpu"
edition = "2021"
version = "0.1.0"

[dependencies]
sjvi = { path = "../vi-rs" }
sjgfx-interface = { path = "../gfx-interface" }
sjgfx-util = { path = "../gfx-util" }
wgpu = {version = "0.13.0", features = ["spirv", "webgl"]}
futures = "0.3.1"
raw-window-handle = "0.4.0"
winit = "0.26.0"
bytemuck = { version = "*", features = ["derive"] }
uuid = { version = "1.2.1", features = ["v4", "js"] }
futures-intrusive = "0.4"
rspirv = "0.11.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]

[dev-dependencies]
sjgfx-util = { path = "../gfx-util" }
winit = "0.26.0"
nalgebra-glm = "0.3"
image = "0.24.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
shaderc = "0.7"
