[package]
name = "sjgfx-wgpu"
edition = "2021"
version = "0.1.0"

[dependencies]
sjvi = { path = "../vi-rs" }
sjgfx-interface = { path = "../gfx-interface" }
sjgfx-util = { path = "../gfx-util" }
futures = "0.3.1"
raw-window-handle = "0.5.0"
winit = "0.27.1"
bytemuck = { version = "*", features = ["derive"] }
uuid = { version = "1.2.1", features = ["v4", "js"] }
futures-intrusive = "0.4"

[dev-dependencies]
sjgfx-util = { path = "../gfx-util" }
winit = "0.27.1"
nalgebra-glm = "0.3"
image = "0.24.0"
wasm-bindgen = "0.2.83"
bytemuck = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = {version = "0.14.2", features = ["spirv"]}
spirv-reflect = "0.2.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = {version = "0.14.2", features = ["spirv", "webgl"]}

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys = { version = "0.3.60", features = [
"Location",
"Blob",
"RequestInit",
"RequestMode",
"Request",
"Response"
] }