[package]
name = "sjgfx"
edition = "2021"
version = "0.1.0"

[dependencies]
sjvi = { path = "../vi-rs" }
sjgfx-interface = { path = "../gfx-interface" }
sjgfx-wgpu = { path = "../gfx-wgpu" }
sjgfx-vulkano = { path = "../gfx-vulkano", optional = true }
winit = "0.27.1"
raw-window-handle = "0.5.0"

[dev-dependencies]
shaderc = "0.7"
winit = "0.27.1"
raw-window-handle = "0.5.0"
# nalgebra-glm = "0.3"

[features]
default = [ "backend-wgpu" ]
backend-ash = []
backend-wgpu = []
backend-vulkano = [ "sjgfx-vulkano" ]