[package]
name = "sj"
edition = "2018"
version = "0.21.0"

[features]
default = ["backend_wgpu"]
backend_vulkano = ["vulkano", "vulkano-win"]
backend_wgpu = ["wgpu", "naga"]
backend_ash = ["ash", "ash-window", "raw-window-handle", "spirv-reflect"]

[dependencies]
bitflags ="1.2"
winit = "0.24.0"
libloading = "0.7"
vulkano =  {version = "0.24.0", optional = true}
vulkano-win = {version = "0.24.0", optional = true}
wgpu = {version = "0.10.0", optional = true}
naga = {version = "0.6.1", features = ["spv-in", "wgsl-out"], optional = true}
ash = {version = "0.32.1", optional = true}
raw-window-handle = { version = "0.3", optional = true}
ash-window = {version = "0.6.0", optional = true}	
futures = "0.3.1"
spirv-reflect = { version = "0.2.3", optional = true }

[dev-dependencies]
shaderc = "0.7"
image = "0.23.14"