[package]
name = "standalone"
edition = "2021"
version = "0.1.0"

[lib]
name = "demolib"
path = "portfolio/lib.rs"

[[bin]]
name = "portfolio"
path = "portfolio/main.rs"

[dependencies]
eframe = { version = "0.22.0", features = ["wgpu"] }

# wgpu の webgl 指定を明示しないとウェブむけビルドが通らない
wgpu = { version = "0.16.0", features = ["spirv", "webgl"] }

# eframe に合わせる
wasm-bindgen-futures = "*"

bytemuck = "*"

[build-dependencies]
naga = { version = "0.12.2", features = ["glsl-in", "spv-out"] }