[package]
name = "vulkan-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ash = { version = "0.37.2", features = ["linked", "debug"] }
ash = { git = "https://github.com/MaikKlein/ash.git", rev = "53c395b", default-features = false, features = ["linked", "debug"] }
